--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Imagery</title>
+    <title>Imagery Gallery</title>
     <style>
         body {
             font-family: Arial, sans-serif;
