--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -27,7 +27,8 @@
             text-align: center;
             font-size: 5rem;
             margin-bottom: 20px;
-            background: linear-gradient(to right, #6C63FF, #FF7043);
+            /*background: linear-gradient(to right, #6C63FF, #FF7043);*/
+            background: #000000;
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
